--- a/javaapp/Dockerfile
+++ b/javaapp/Dockerfile
@@ -1,14 +1,5 @@
-# Use an official Java runtime as a parent image
-FROM openjdk:21-jdk-slim
+FROM openjdk:21-slim
 
-# Set the working directory in the container
-WORKDIR /app
+COPY target/javaapp-0.0.1-SNAPSHOT.jar app-1.0.0.jar
 
-# Copy the jar file into the container at /app
-COPY target/javaapp-0.0.1.jar /app/javaapp-1.0.0.jar
-
-# Make port 8080 available to the world outside this container
-EXPOSE 8080
-
-# Run the jar file 
-ENTRYPOINT ["java", "-jar", "/app/javaapp-1.0.0.jar"]
+ENTRYPOINT [ "java", "-jar", "app-1.0.0.jar" ]
